<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                tools:ignore="contentDescription"
                tools:src="@drawable/placeholder" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/name_label"
                    style="@style/AppTheme.ProductListItem.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/name"
                    style="@style/AppTheme.ProductListItem.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/name_label"
                    tools:text="Burj Khalifa" />

                <TextView
                    android:id="@+id/price_label"
                    style="@style/AppTheme.ProductListItem.Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_label"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/price"
                    style="@style/AppTheme.ProductListItem.Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_label"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/price_label"
                    tools:text="500$" />

                <TextView
                    android:id="@+id/category_label"
                    style="@style/AppTheme.ProductListItem.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/price_label"
                    android:text="@string/category"
                    tools:text="@string/category" />

                <TextView
                    android:id="@+id/category"
                    style="@style/AppTheme.ProductListItem.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/price_label"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/company_label"
                    tools:text="Хозю товары" />

                <TextView
                    android:id="@+id/company_label"
                    style="@style/AppTheme.ProductListItem.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/category_label"
                    android:text="@string/company"
                    tools:text="@string/company" />

                <TextView
                    android:id="@+id/company"
                    style="@style/AppTheme.ProductListItem.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/category_label"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/company_label"
                    tools:text="Bishkek Park" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/company_label"
                    android:layout_marginTop="8dp"
                    android:lineSpacingExtra="2dp"
                    android:textSize="14sp"
                    tools:text="@string/placeholder_text" />


            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>